--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,3 +2,14 @@ body {
     background-color: cadetblue;
     color: crimson;
 }
+section {
+    background-color: darkorange;
+    color: blue;
+    border: 2px solid green;
+    width: 30%;
+    border-radius: 2em;
+    padding: 1em;
+    text-align: center;
+    float: right;
+
+}
