body text-align

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,7 @@
 body {
     background-color: cadetblue;
     color: crimson;
+    text-align: center;
 }
 section {
     background-color: darkorange;
